--- a/03-multi-container.yaml
+++ b/03-multi-container.yaml
@@ -7,4 +7,5 @@ spec:
  - name: nginx
    image: nginx
  - name: almalinux
-   image: almalinux:9    
+   image: almalinux:9
+   command: ["sleep", "1000"]    
