--- a/08-configmap.yaml
+++ b/08-configmap.yaml
@@ -3,5 +3,5 @@ apiVersion: v1
 metadata:
  name: my-configmap
 data:
-  course: kubernetes
-  duration: 25
+  course: "kubernetes"
+  duration: "25hrs"
