--- a/10-secrets.yaml
+++ b/10-secrets.yaml
@@ -1,7 +1,7 @@
 kind: Secret
-apiversion: v1
+apiVersion: v1
 metadata:
-  name: secret-con
+  name: secret
 data:
   username: YWRtaW4=
   password: YWRtaW4xMjM= 
