--- a/12-service.yaml
+++ b/12-service.yaml
@@ -9,7 +9,7 @@ spec:
     environment: dev
     version: "1.0.0"
   ports:
-  - protocal: TCP
+  - protocol: TCP
     port: 80 # service port 
     targetPort: 80
 ---
