--- a/15-replicaSet.yaml
+++ b/15-replicaSet.yaml
@@ -1,17 +1,44 @@
+# apiVersion: apps/v1
+# kind: ReplicaSet
+# metadata:
+#   name: nginx
+#   # these labels are replicaset labels
+#   lables:
+#     app: frontend
+#     tier: web
+# spec:
+#   replicas: 3
+#   selector:
+#     matchLabels:
+#       app: frontend
+#       tier: web
+#   template:
+#     metadata:
+#       labels:
+#         app: frontend
+#         tier: web
+#     spec:
+#       containers:
+#       - name: nginx
+#         image: nginx
+
 apiVersion: apps/v1
 kind: ReplicaSet
 metadata:
   name: nginx
   # these labels are replicaset labels
-  lables:
+  labels:
     app: frontend
     tier: web
 spec:
+  # modify replicas according to your case
   replicas: 3
   selector:
+    # replicaset use these labels to find the pods for creating desired number of replicas
     matchLabels:
       app: frontend
       tier: web
+  # pod template
   template:
     metadata:
       labels:
@@ -20,5 +47,5 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx
+        image: nginx:stable-perl
 
