--- a/15-replicaSet.yaml
+++ b/15-replicaSet.yaml
@@ -3,7 +3,7 @@ kind: ReplicaSet
 metadata:
   name: nginx
   # these labels are replicaset labels
-  lables:
+  labels:
     app: frontend
     tier: web
 spec:
