--- a/volumes/02-ebs-static-pvc.yaml
+++ b/volumes/02-ebs-static-pvc.yaml
@@ -9,4 +9,20 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 20Gi  
+      storage: 20Gi
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: ebs-static
+spec:
+  containers:
+  - name: nginx
+    image: nginx
+    volumeMounts:
+    - name: persistent-storage
+      mountPath: /usr/share/nginx/html  
+  volumes:
+  - name: persistent-storage
+    persistentVolumeClaim:
+      claimName: ebs-static            
