--- a/volumes/02-ebs-static-pvc.yaml
+++ b/volumes/02-ebs-static-pvc.yaml
@@ -15,7 +15,11 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: ebs-static
+  labels:
+    purpose: ebs-static-demo
 spec:
+  nodeSelector:
+  topology.kubernetes.io/zone: us-east-1c
   containers:
   - name: nginx
     image: nginx
@@ -25,4 +29,18 @@ spec:
   volumes:
   - name: persistent-storage
     persistentVolumeClaim:
-      claimName: ebs-static            
+      claimName: ebs-static  
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx
+spec:
+  type: LoadBalancer
+  selector: 
+    purpose: ebs-static-demo
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: 80
+    nodePort: 30007                    
