--- a/volumes/02-ebs-static-pvc.yaml
+++ b/volumes/02-ebs-static-pvc.yaml
@@ -20,7 +20,7 @@ metadata:
     purpose: "ebs-static-demo"
 spec:
   nodeSelector:
-    topology.kubernetes.io/zone: us-east-1a
+    topology.kubernetes.io/zone: us-east-1c
   containers:
   - name: nginx
     image: nginx
