--- a/practice/volumes/02-ebs-static-pvc.yaml
+++ b/practice/volumes/02-ebs-static-pvc.yaml
@@ -10,3 +10,23 @@ spec:
   resources:
     requests:
       storage: 10Gi  
+---
+apiVersion: v1
+kind: Pod
+metadata: 
+  name: ebs-static
+  labels:
+    purpose: "ebs-static-demo"
+spec:
+  nodeSelector: 
+    topology.kubernetes.io/zone: us-east-1d
+  containers:
+  - name: nginx
+    image: nginx    
+    volumeMounts: 
+    - name: persistent-storage
+      mountPath: /usr/share/nginx/html
+  volumes:
+  - name: persistent-storage
+    persistentVolumeClaim: 
+      claimName: ebs-static
