--- a/practice/volumes/02-ebs-static-pvc.yaml
+++ b/practice/volumes/02-ebs-static-pvc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata: 
-  name: ebs-static
+  name: ebs-stat
 spec:
   storageClassName: ""
-  volumeName: ebs-static
+  volumeName: ebs-stat
   accessModes:
   - ReadWriteOnce
   resources:
@@ -14,7 +14,7 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata: 
-  name: ebs-static
+  name: ebs-stat
   labels:
     purpose: "ebs-static-demo"
 spec:
@@ -29,4 +29,4 @@ spec:
   volumes:
   - name: persistent-storage
     persistentVolumeClaim: 
-      claimName: ebs-static
+      claimName: ebs-stat
