--- a/practice/volumes/02-ebs-static-pvc.yaml
+++ b/practice/volumes/02-ebs-static-pvc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata: 
-  name: ebs-stat
+  name: ebs
 spec:
   storageClassName: ""
-  volumeName: ebs-stat
+  volumeName: ebs
   accessModes:
   - ReadWriteOnce
   resources:
@@ -14,7 +14,7 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata: 
-  name: ebs-stat
+  name: ebs
   labels:
     purpose: "ebs-static-demo"
 spec:
@@ -29,4 +29,18 @@ spec:
   volumes:
   - name: persistent-storage
     persistentVolumeClaim: 
-      claimName: ebs-stat
+      claimName: ebs
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: ebs
+spec:
+  type: LoadBalancer
+  selctor:
+    purpose: "ebs-static-demo"
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: 80
+    nodePort: 30007
