--- a/practice/volumes/02-ebs-static-pvc.yaml
+++ b/practice/volumes/02-ebs-static-pvc.yaml
@@ -19,7 +19,7 @@ metadata:
     purpose: "ebs-static-demo"
 spec:
   nodeSelector: 
-    topology.kubernetes.io/zone: us-east-1d
+    topology.kubernetes.io/zone: us-east-1c
   containers:
   - name: nginx
     image: nginx    
